# medical_diagnosis

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.sh  user_inputs.txt
src/heart_diagnosis/: __init__.py  agents.py  blackboard.py  crew.py  data_loader.py  evaluate.py  intake.py  llm.py  main.py  meta_agents.py  orchestrator.py  protocols.py  report.py  schemas.py
src/heart_diagnosis/config/: agents.yaml  tasks.yaml
tests/: test_agents.py  test_blackboard_meta.py  test_orchestrator.py  test_pipeline.py  test_schemas.py
