[project]
name = "heart_diagnosis"
version = "0.2.0"
description = "Multi-agent heart disease diagnosis system evaluated on the UCI Heart Disease dataset"
authors = [{ name = "MASIMD UTCN" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.40.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
heart-diagnosis = "heart_diagnosis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heart_diagnosis"]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
